--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -11,8 +11,12 @@ services:
     # env_file:
     #   - .env
     environment:
+      NODE_ENV: production
+      # MEERKAT_BULK_INSERT_MODE: 1
       # What appears in this section overrides anything in .env.
-      DATABASE_URL: mysql://user1:asdf1@db:3306/directory1
+      DATABASE_URL: mysql://user1:asdf1@localhost/directory1?socket=/var/run/mysqld/mysqld.sock
+      # DATABASE_URL: mysql://user1:asdf1@db:3306/directory1
+      # MEERKAT_LOG_LEVEL: info
       MEERKAT_LOG_LEVEL: debug
       MEERKAT_IDM_PORT: 4632
       MEERKAT_OPEN_TOP_LEVEL: 1
@@ -63,6 +67,7 @@ services:
         source: ./pki
         target: /pki
         read_only: true
+      - mysql_socket:/var/run/mysqld
     depends_on:
       init1:
         condition: service_completed_successfully
@@ -76,8 +81,12 @@ services:
     # env_file:
     #   - .env
     environment:
+      NODE_ENV: production
+      # MEERKAT_BULK_INSERT_MODE: 1
       # What appears in this section overrides anything in .env.
-      DATABASE_URL: mysql://user2:asdf2@db:3306/directory2
+      DATABASE_URL: mysql://user2:asdf2@localhost/directory2?socket=/var/run/mysqld/mysqld.sock
+      # DATABASE_URL: mysql://user2:asdf2@db:3306/directory2
+      # MEERKAT_LOG_LEVEL: info
       MEERKAT_LOG_LEVEL: debug
       MEERKAT_IDM_PORT: 4632
       MEERKAT_OPEN_TOP_LEVEL: 1
@@ -126,6 +135,7 @@ services:
         source: ./pki
         target: /pki
         read_only: true
+      - mysql_socket:/var/run/mysqld
     depends_on:
       init2:
         condition: service_completed_successfully
@@ -139,8 +149,12 @@ services:
     # env_file:
     #   - .env
     environment:
+      NODE_ENV: production
+      # MEERKAT_BULK_INSERT_MODE: 1
       # What appears in this section overrides anything in .env.
-      DATABASE_URL: mysql://user3:asdf3@db:3306/directory3
+      DATABASE_URL: mysql://user3:asdf3@localhost/directory3?socket=/var/run/mysqld/mysqld.sock
+      # DATABASE_URL: mysql://user3:asdf3@db:3306/directory3
+      # MEERKAT_LOG_LEVEL: info
       MEERKAT_LOG_LEVEL: debug
       MEERKAT_IDM_PORT: 4632
       MEERKAT_OPEN_TOP_LEVEL: 1
@@ -189,6 +203,7 @@ services:
         source: ./pki
         target: /pki
         read_only: true
+      - mysql_socket:/var/run/mysqld
     depends_on:
       init3:
         condition: service_completed_successfully
@@ -255,12 +270,14 @@ services:
     ports:
       - '3306:3306/tcp'
     volumes:
+      - mysql_socket:/var/run/mysqld
       # - data:/var/lib/mysql
       # - './data/mysql:/var/lib/mysqllog:rw'
       - './sql:/docker-entrypoint-initdb.d:ro'
 
-# volumes:
-#   data: {}
+volumes:
+  # data: {}
+  mysql_socket: {}
 
 # networks:
 #   default:
