chore: change config to use test database

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # DATABASE_URL=postgresql://postgres:example@localhost:5432/directory?schema=public
 # DATABASE_URL=mysql://root:example@localhost:3306/directory?connection_limit=40&pool_timeout=30
-DATABASE_URL=mysql://root:example@localhost:3306/directory
+DATABASE_URL=mysql://user1:asdf1@localhost/directory1
 MEERKAT_WEB_ADMIN_PORT=18080
 MEERKAT_WEB_ADMIN_AUTH_USERNAME=asdf
 MEERKAT_WEB_ADMIN_AUTH_PASSWORD=asdf
