--- a/apps/meerkat/tsconfig.app.json
+++ b/apps/meerkat/tsconfig.app.json
@@ -3,6 +3,7 @@
     "compilerOptions": {
         "outDir": "../../dist/out-tsc",
         "module": "esnext",
+        "target": "ES2022",
         "types": ["node"],
         "esModuleInterop": true,
         "resolveJsonModule": true,
