--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
         "eslint-config-prettier": "8.6.0",
         "jest": "29.4.3",
         "json-schema-to-typescript": "^11.0.2",
+        "node-loader": "^2.0.0",
         "nx": "16.7.4",
         "nx-cloud": "16.3.0",
         "prettier": "2.8.3",
