feat(meerkat): use sqlite as database provider

--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
+# See: https://www.prisma.io/docs/concepts/components/prisma-client/debugging
+# DEBUG="*"
 # DATABASE_URL=postgresql://postgres:example@localhost:5432/directory?schema=public
 # DATABASE_URL=mysql://root:example@localhost:3306/directory?connection_limit=40&pool_timeout=30
 # DATABASE_URL=mysql://user1:asdf1@localhost/directory1
-DATABASE_URL=mysql://root:example@localhost/directory
+# DATABASE_URL=mysql://root:example@localhost/directory
+DATABASE_URL=file:/home/jonathan/repos/directory/dev.db?connection_limit=1
 MEERKAT_WEB_ADMIN_PORT=18080
 MEERKAT_WEB_ADMIN_AUTH_USERNAME=asdf
 MEERKAT_WEB_ADMIN_AUTH_PASSWORD=asdf
@@ -69,8 +72,6 @@ NODE_ENV=development
 LC_MESSAGES=en_US.utf8
 LC_ALL=en_US.utf8
 LANG=en_US.utf8
-# See: https://www.prisma.io/docs/concepts/components/prisma-client/debugging
-# DEBUG=*
 MEERKAT_TEST_TELEMETRY=1 # Undocumented.
 MEERKAT_CHAINING_TLS_OPTIONAL=1
 MEERKAT_OB_AUTO_ACCEPT=0
