--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
         "@wildboar/pc": "^1.0.6",
         "@wildboar/pkcs": "^1.0.7",
         "@wildboar/pki-stub": "^1.1.8",
+        "@wildboar/rose": "^1.0.6",
+        "@wildboar/rtse": "^1.0.4",
         "@wildboar/safecurves-pkix-18": "^1.0.7",
         "@wildboar/scrypt-0": "^1.0.5",
         "@wildboar/scvp": "^1.0.6",
@@ -138,6 +140,7 @@
         "eslint": "8.46.0",
         "eslint-config-prettier": "8.6.0",
         "jest": "29.4.3",
+        "jest-environment-node": "^29.4.1",
         "json-schema-to-typescript": "^11.0.2",
         "nx": "16.7.4",
         "nx-cloud": "16.3.0",
@@ -149,6 +152,10 @@
         "ts-node": "10.9.1",
         "tslib": "^2.4.1",
         "typescript": "4.9.4",
+        "verdaccio": "^5.0.4",
         "webpack-merge": "^5.8.0"
+    },
+    "nx": {
+        "includedScripts": []
     }
 }
