--- a/.env
+++ b/.env
@@ -89,3 +89,8 @@ MEERKAT_ITOTS_PORT=11102
 # MEERKAT_TEST_HOST=dsa01.test.mkdemo.wildboar.software
 # MEERKAT_TEST_PORT=4632
 MEERKAT_LOG_LEVEL=debug
+
+# Disable all requirements to receive signed results.
+MEERKAT_SIGNING_MIN_AUTH_LEVEL=0
+MEERKAT_SIGNING_MIN_AUTH_LOCAL_QUALIFIER=0
+MEERKAT_SIGNING_MIN_AUTH_SIGNED=0
