--- a/apps/meerkat/tsconfig.app.json
+++ b/apps/meerkat/tsconfig.app.json
@@ -7,7 +7,7 @@
         "types": ["node"],
         "esModuleInterop": true,
         "resolveJsonModule": true,
-        "sourceMap": false
+        "sourceMap": true
     },
     "exclude": [
         "**/*.spec.ts",
