--- a/package.json
+++ b/package.json
@@ -35,12 +35,6 @@
         "@docusaurus/plugin-pwa": "2.2.0",
         "@docusaurus/preset-classic": "2.2.0",
         "@mdx-js/react": "^1.6.22",
-        "@nestjs/common": "^9.2.1",
-        "@nestjs/config": "^2.2.0",
-        "@nestjs/core": "^9.2.1",
-        "@nestjs/platform-express": "^9.2.1",
-        "@nestjs/swagger": "^6.1.4",
-        "@nestjs/terminus": "^9.1.4",
         "@nx/webpack": "^16.7.4",
         "@prisma/client": "^5.11.0",
         "@wildboar/acse": "^1.0.7",
@@ -73,9 +67,9 @@
         "dotenv": "^16.0.3",
         "email-addresses": "^5.0.0",
         "escape-html": "^1.0.3",
-        "express": "^4.18.2",
-        "express-handlebars": "^6.0.6",
-        "express-session": "^1.17.3",
+        "express": "5.x.x",
+        "express-handlebars": "8.x.x",
+        "express-session": "^1.18.0",
         "fast-levenshtein": "^3.0.0",
         "flat": "^5.0.2",
         "hbs": "^4.2.0",
@@ -84,6 +78,7 @@
         "i18next-fs-backend": "^1.1.4",
         "is-debugging": "^1.0.1",
         "js-yaml": "^4.1.0",
+        "koa": "^2.15.4",
         "lodash": "^4.17.21",
         "os-locale": "^5.0.0",
         "passport": "^0.6.0",
@@ -99,7 +94,6 @@
         "safe-timers": "1.1.0",
         "semver": "^7.3.8",
         "serve-static": "^1.15.0",
-        "swagger-ui-express": "^4.6.0",
         "tiny-typed-emitter": "^2.1.0",
         "tslib": "^2.4.0",
         "winston": "^3.8.2",
@@ -118,13 +112,14 @@
         "@types/cookie-parser": "^1.4.3",
         "@types/csurf": "^1.11.2",
         "@types/escape-html": "^1.0.2",
-        "@types/express": "^4.17.15",
+        "@types/express": "^4.17.21",
         "@types/express-session": "^1.17.5",
         "@types/fast-levenshtein": "^0.0.2",
         "@types/flat": "^5.0.2",
         "@types/jest": "29.4.4",
         "@types/js-yaml": "^4.0.5",
         "@types/json-schema": "^7.0.11",
+        "@types/koa": "^2.15.0",
         "@types/node": "18.11.18",
         "@types/passport-local": "^1.0.34",
         "@types/passport-strategy": "^0.2.35",
