--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,8 @@
+# I think this is abandoned for now, but I will resurrect it once I switch
+# Meerkat DSA to using SQLite.
 name: meerkat-dsa
 base: core20
-version: '3.2.4'
+version: '3.2.5'
 summary: X.500 Directory (DSA) and LDAP Server
 description: |
   Fully-featured X.500 directory server / directory system agent (DSA)
